<resources>
    <string name="app_name">AgeGame</string>
    <string name="start">Age guess</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="if_you_already_have_an_account_login_here">If you already have an account, login here!</string>
    <string name="firstname">FirstName</string>
    <string name="secondname">SecondName</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="lastname">lastName</string>
    <string name="logout">Logout</string>
    <string name ="Start_new_game">Start new game</string>
    <string name="guess">Guess</string>
    <string name="easiest_image">Easiest image</string>
    <string name="upload_image">Upload Image</string>
    <string name="played">Played</string>
    <string name="accuracy">Accuracy</string>
    <string name="enter_player_count">Enter player count</string>
    <string name="enter_time_limit">Enter time limit</string>
    <string name="start_game">Start Game</string>
    <string name="players_are_joining">Players are joining...</string>
    <string name="enter_gameid">Enter gameID</string>
    <string name="start_HLMulti">Start HL</string>
    <string name="join_HLMulti">Join HL</string>
    <string name="player1">player1</string>
    <string name="player3">player2</string>
    <string name="player2">player3</string>
    <string name="view_stats">View stats</string>
    <string name="rounds_played">Enter rounds to be played</string>
</resources>